[package]
name = "abc022"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc022-a",problem = {platform = "atcoder",contest = "abc022",index = "A"}}
b = {name = "abc022-b",problem = {platform = "atcoder",contest = "abc022",index = "B"}}
c = {name = "abc022-c",problem = {platform = "atcoder",contest = "abc022",index = "C"}}
d = {name = "abc022-d",problem = {platform = "atcoder",contest = "abc022",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"

[[bin]]
name = "abc022-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc022-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc022-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc022-d"
path = "./src/bin/d.rs"
