[package]
name = "arc027"
version = "0.1.0"
authors = ["Yosuke Onoue <onoue@likr-lab.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "arc027-a",problem = {platform = "atcoder",contest = "arc027",index = "A"}}
b = {name = "arc027-b",problem = {platform = "atcoder",contest = "arc027",index = "B"}}
c = {name = "arc027-c",problem = {platform = "atcoder",contest = "arc027",index = "C"}}
d = {name = "arc027-d",problem = {platform = "atcoder",contest = "arc027",index = "D"}}

# dependencies added to new project
[dependencies]
itertools = "*"
num = "*"
permutohedron = "*"
proconio = "*"
superslice = "*"
union-find = "*"
petgraph = "*"

[[bin]]
name = "arc027-a"
path = "./src/bin/a.rs"

[[bin]]
name = "arc027-b"
path = "./src/bin/b.rs"

[[bin]]
name = "arc027-c"
path = "./src/bin/c.rs"

[[bin]]
name = "arc027-d"
path = "./src/bin/d.rs"
